[package]
name = "serial_packet_parser"
version = "0.1.0"
authors = ["Greg Green <ggreen@bit-builder.com>"]
description = "Serial Network Packet parser"
documentation = "https://docs.rs/serial_packet_parser"
repository = "https://github.com/gpgreen/serial_packet_parser.git"
readme = "README.md"
keywords = ["serial", "packet", "parser"]
categories = ["embedded", "no-std"]
homepage = "https://github.com/gpgreen/serial_packet_parser"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.7.13"
machine = "0.3.0"
defmt = "0.3"